--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -8,6 +8,21 @@
     </head>
     <body ng-app="pokedexApp">
 
+        <div class="app">
+            <img class="pokeball-back" id="pokeballBack" src="//hanashiro.github.io/pokedex/images/pokeball.svg">
+
+            <input type="text" id="pokeFilter" placeholder="Search">
+
+            <ul class="poke-list" id="pokeList">
+                <li class="poke-list-item" ng-repeat = 'i in [1, 2, 3, 4, 5, 6]'>
+                    <a>
+                        <img src="//serebii.net/pokedex-xy/icon/025.png" alt="">
+                        <span>025 - Pikachu</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.9/angular.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-route/1.7.9/angular-route.min.js"></script>
 
