--- a/exercícios/controller.html
+++ b/exercícios/controller.html
@@ -8,6 +8,7 @@
     <body ng-app="myApp">
 
         <div ng-controller = "myController as vm">
+            <input type = "text" ng-model = "vm.title">
             {{ vm.title }}
         </div>
 
