--- a/exercicios/controller.html
+++ b/exercicios/controller.html
@@ -8,7 +8,13 @@
     <body ng-app="myApp">
 
         <div ng-controller = "myController as vm">
-            {{ vm.title }}
+            <h1>{{ vm.title }}</h1>
+            <input type="text" ng-model="vm.title">
+            <p>
+                <my-component text="vm.title" my-func="vm.print">
+                    <button>Clicar</button>
+                </my-component>
+            </p>
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.9/angular.min.js"></script>
@@ -16,5 +22,6 @@
 
         <script src="js/app.js"></script>
         <script src="js/myController.js"></script>
+        <script src="my-component.js"></script>
     </body>
 </html>
