--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -14,12 +14,7 @@
             <input type="text" id="pokeFilter" placeholder="Search" ng-model = "vm.searchText">
 
             <ul class="poke-list" id="pokeList">
-                <li class="poke-list-item" ng-repeat = "pkm in vm.pkmList">
-                    <a>
-                        <img ng-src="//serebii.net/pokedex-xy/icon/{{ pkm.number }}.png" alt="">
-                        <span>{{ pkm.number }} - {{ pkm.name }}</span>
-                    </a>
-                </li>
+                <poke-list-item-component ng-repeat="pkm in vm.pkmList" pkm = 'pkm'></poke-list-item-component>
             </ul>
         </div>
 
@@ -28,5 +23,6 @@
 
         <script src="js/app.js"></script>
         <script src="js/controllers/pokeDexController.js"></script>
+        <script src="js/components/pokeListItem/pokeListItemComponent.js"></script>
     </body>
 </html>
