--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -9,7 +9,7 @@
     <body ng-app="pokedexApp">
 
         <div class="app" ng-controller = "PokeDexController as vm">
-            <img class="pokeball-back" id="pokeballBack" src="//hanashiro.github.io/pokedex/images/pokeball.svg">
+            <img roll-on-scroll class="pokeball-back" id="pokeballBack" src="//hanashiro.github.io/pokedex/images/pokeball.svg">
 
             <input type="text" id="pokeFilter" placeholder="Search" ng-model = "vm.searchText">
 
@@ -24,5 +24,6 @@
         <script src="js/app.js"></script>
         <script src="js/controllers/pokeDexController.js"></script>
         <script src="js/components/pokeListItem/pokeListItemComponent.js"></script>
+        <script src="js/directives/RollOnScrollDirective.js"></script>
     </body>
 </html>
