--- a/exercicios/controller.html
+++ b/exercicios/controller.html
@@ -8,7 +8,7 @@
     <body ng-app="myApp">
 
         <div ng-controller = "myController as vm">
-            <h1>{{ vm.title }}</h1>
+            <h1>{{ vm.title | myFilter }}</h1>
             <input type="text" ng-model="vm.title">
             <p>
                 <my-component text="vm.title" my-func="vm.print">
@@ -23,5 +23,6 @@
         <script src="js/app.js"></script>
         <script src="js/myController.js"></script>
         <script src="my-component.js"></script>
+        <script src="js/myfilter.js"></script>
     </body>
 </html>
