--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -25,5 +25,6 @@
         <script src="js/controllers/pokeDexController.js"></script>
         <script src="js/components/pokeListItem/pokeListItemComponent.js"></script>
         <script src="js/directives/RollOnScrollDirective.js"></script>
+        <script src="js/services/pokeApiFactory.js"></script>
     </body>
 </html>
