--- a/exercicios/controller.html
+++ b/exercicios/controller.html
@@ -15,6 +15,10 @@
                     <button>Clicar</button>
                 </my-component>
             </p>
+
+            <ul>
+                <li ng-repeat = 'item in vm.repositories'>{{ item.full_name }}</li>
+            </ul>
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.9/angular.min.js"></script>
