--- a/exercicios/controller.html
+++ b/exercicios/controller.html
@@ -17,8 +17,9 @@
             </p>
 
             <ul>
-                <li ng-repeat = 'item in vm.repositories'>{{ item.full_name }}</li>
+                <li ng-repeat = 'item in vm.cursos'>{{ item.curso }}</li>
             </ul>
+
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.9/angular.min.js"></script>
